<resources>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="app_name">Eventic</string>
    <string name="sign_in">Sign In</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="or_sign_in">or sign up with an</string>
    <string name="enterprise_account">Enterprise Account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="repeat_password">Repeat your password</string>
    <string name="i_agree_to_the">I agree to the</string>
    <string name="terms_of_service">Terms of Service and Privacy Policy</string>
    <string name="next">Continue</string>
    <string name="already_account">Already have an Account?</string>
    <string name="Continue">Continue</string>
    <string name="Your_email_address">Your email address</string>
    <string name="sign_up_company">Company Sign Up</string>
    <string name="title_activity_scrolling" translatable="false">ScrollingActivity</string>
    <string name="large_text" translatable="false">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="FullName">Full Name</string>
    <string name="username">Username</string>
    <string name="CompanyName">Company Name</string>
    <string name="kilometers">km</string>
    <string name="searchHint">Search in Eventic</string>
    <string name="login_error">Username or password incorrect</string>
    <string name="connection_error">Connection Error</string>
    <string name="connection_error_msg">There was an error connecting to the server</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="create_event">Create event</string>
    <string name="price">Price</string>
    <string name="event_location">Event Location</string>
    <string name="event_price">Event Price</string>
    <string name="capacity">Capacity</string>
    <string name="event_capacity">Event Capacity</string>
    <string name="end_time">End Time</string>
    <string name="start_time">Start Time</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="event_time">Event Time</string>
    <string name="event_tags">Event Tags</string>
    <string name="event_images">Event Images</string>
    <string name="event_description">Event Description</string>
    <string name="event_title">Event Title</string>
    <string name="add_tag">Add Tag</string>
    <string name="passwords_not_equals">Passwords must be equal</string>
    <string name="select_tag">Pick a tag to add</string>
    <string name="take_photo">Take a photo</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="delete_image">Delete image</string>
    <string name="cancel">Cancel</string>
    <string name="choose_profile_picture">Choose your new Profile Picture</string>
    <string name="permission_needed">Permission needed</string>
    <string name="need_storage_permission">We need storage permission in order to access to your gallery</string>
    <string name="wrong_parameters">Wrong parameters</string>
    <string name="email_password_incorrect">Email or password is incorrect</string>
    <string name="need_location_permission">We need location permissions in order to show your location on the map</string>
    <string name="successful_signed_out">Signed out successfully!</string>
    <string name="save_changes">Save changes</string>
    <string name="join_event">Join Event</string>
    <string name="drop_event">Leave Event</string>
    <string name="remove_event">Remove Event</string>
    <string name="edit_event">Edit Event</string>
    <string name="chat" translatable="false">Chat</string>
    <string name="tag_not_found" translatable="false">Not found</string>
    <string name="tag_education">Education</string>
    <string name="tag_music">Music</string>
    <string name="tag_productivity">Productivity</string>
    <string name="tag_culture">Culture</string>
    <string name="tag_gastronomy">Gastronomy</string>
    <string name="tag_leisure">Leisure</string>
    <string name="accept">Okay</string>
    <string name="title_activity_chat_chooser" translatable="false">ScrollingActivity</string>
    <string name="message_hint">Type something here...</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="actual_password">Actual Password</string>
    <string name="new_password">New password</string>
    <string name="type_email">Type your email address</string>
    <string name="my_chats">My chats</string>
    <string name="created_events">Created events</string>
    <string name="change_password">Change password</string>
    <string name="sign_out">Sign out</string>
    <string name="remove_account">Remove account</string>
    <string name="for_you_events">Events for you</string>
    <string name="joined_events">Joined events</string>
    <string name="nearby_events">Nearby events</string>
    <string name="report_covid">Report covid</string>
    <string name="edit_profile">Edit profile</string>
    <string name="tag_concerts">Concerts</string>
    <string name="tag_festivals">Festivals</string>
    <string name="tag_recently">Recently</string>
    <string name="tag_ubication">Ubication</string>
    <string name="tag_price">Price</string>
    <string name="report_covid_case">Report covid case</string>
    <string name="report_successful">The report has been done successfully</string>
    <string name="remove_account_notice">Are you sure you want to delete your account? This action cannot be undone.</string>
    <string name="report_covid_notice">"At Eventic we trust our users to make a good use of this feature. Please only use this if you are sure that you tested positive in a COVID test recently. Thank you very much. "</string>
    <string name="delete_account_message">Account deleted successfully</string>
    <string name="password_length">Password (Must be at least 7 characters long)</string>
</resources>